// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkIcon should apply user props 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "BpkIcon",
        "fontSize": 24,
        "lineHeight": 24,
      },
      Object {
        "color": "blue",
      },
    ]
  }
>
  
</Text>
`;

exports[`iOS BpkIcon should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "BpkIcon",
        "fontSize": 24,
        "lineHeight": 24,
      },
    ]
  }
>
  
</Text>
`;

exports[`iOS BpkIcon should render small icon correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "BpkIcon",
        "fontSize": 24,
        "lineHeight": 24,
      },
      Object {
        "fontSize": 16,
        "lineHeight": 16,
      },
    ]
  }
>
  
</Text>
`;
